# secure-paper

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
docs/: ideas.dox  mainpage.dox
include/: credentials.hpp  file_storage.hpp  options.hpp  storage.hpp
scripts/: verify-encryption.sh
src/: file_storage.cpp  main.cpp  options.cpp  storage.cpp
